--- a/index.html
+++ b/index.html
@@ -3,71 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
+    <title>Loading Bar</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body{
-            background-image:url(p6.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-    </style>
 </head>
 <body>
-    <div id="mnc">
-        <img src="Logo (2).png" alt="Image not found" id="Logoimg">
-        <nav id="navone">
-            <ul class="mb">
-            <a href="index.html" target="_blank"><li class="m">Home</li></a>
-            <a href="aboutus.html" target="_blank"><li class="m">AboutUs</li></a>
-            <a href="contactus.html" target="_blank"><li class="m">ContactUs</li></a>
-            <a href="services.html" target="_blank"><li class="m">Services</li></a>
-            <a href="students.html" target="_blank"><li class="m">Students</li></a>
-            </ul>
-        </nav>
+    <div class="loading">
+        <div class="bar">Downloading</div>
     </div>
-    <div id="imgslider">
-        
-    </div>
-
-    <div id="lform">
-        <h1 id="fh">Login Form</h1>
-        <hr/>
-        <form action="admin.html" method="post" id="ff"> 
-            <label for=""></label>User Name</label><br>
-            <input type="text" id="name" name="name" class="ic"/><br>
-            <label for="">Email ID</label> <br>
-            <input type="email" id="emial" name="email" class="ic"/><br>
-            <label for="">Password</label><br>
-            <input type="password" id="password" name="password" class="ic"/><br><br>
-            <input type="submit" value="Login" id="btn1" class="btn">
-            <input type="reset" value="Reset" id="btn2" class="btn">
-
-
-        </form>
-    </div>
-    <div id="oc"> 
-        <h2>Our Courses</h2>
-        <table id="ct" border="2">
-            <tr>
-                <th>Course</th>
-                <th>Duration</th>
-                <th>Fee</th>
-            </tr>
-            <tr>
-                <td>Python</td>
-                <td>3 Months</td>
-                <td>10000</td>
-            </tr>
-            <tr>
-                <td>Css</td>
-                <td>3 Months</td>
-                <td>11000</td>
-            </tr>
-
-        </table>
-
-    </div>
-
+    
 </body>
 </html>
